--- a/index.html
+++ b/index.html
@@ -1209,36 +1209,32 @@
               </div>
             </section>
             <br />
-            <!-- core competencies section -->
+            <!-- tools section -->
             <section>
               <div class="inline-flex flex-column mb-3">
-                <h2 style="margin-bottom: 0.25rem">Interests</h2>
+                <h2 style="margin-bottom: 0.25rem">Tools</h2>
                 <div class="bg-primary" style="height: 2px"></div>
               </div>
               <div class="row">
-                <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div
-                    class="flex middle-xs around-xs card shadow bg-secondary"
-                  >
-                    <i
-                      class="bi bi-shop-window"
-                      style="font-size: 1.8rem; color: #ffbb2c"
-                    ></i>
-                    <h3 class="m-0">Lorem Ipsum</h3>
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <h4>DATA ANALYTICS ENGINES</h4>
+                  <div class="card shadow bg-secondary">
+                    <h3 class="m-0">Apache Spark</h3>
+                  </div>
+                </div>
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
+                  <h4>WEB FRAMEWORKS</h4>
+                  <div class="card shadow bg-secondary">
+                    <h3 class="m-0">Spring Boot</h3>
+                    <h3 class="m-0">Angular</h3>
+                    <h3 class="m-0">Laravel</h3>
+                    <h3 class="m-0">ExpressJS & Nodejs</h3>
+                    <h3 class="m-0">Flask</h3>
+                    <h3 class="m-0">ReactJs</h3>
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-md-0">
-                  <div class="flex card shadow bg-secondary">
-                    <i
-                      class="ri-bar-chart-box-line"
-                      style="font-size: 1.8rem; color: #5578ff"
-                    ></i>
-                    <h3 class="m-0">Dolor Sitema</h3>
-                  </div>
-                  <br />
-                </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-md-0">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-calendar-todo-line"
@@ -1248,53 +1244,13 @@
                   </div>
                   <br />
                 </div>
-                <div class="col-xs-6 col-lg-3 col-md-4 mt-lg-0">
+                <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div class="card shadow bg-secondary">
                     <i
                       class="ri-paint-brush-line"
                       style="font-size: 1.8rem; color: #e361ff"
                     ></i>
                     <h3 class="m-0">Magni Dolores</h3>
-                  </div>
-                  <br />
-                </div>
-                <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-secondary">
-                    <i
-                      class="ri-database-2-line"
-                      style="font-size: 1.8rem; color: #47aeff"
-                    ></i>
-                    <h3 class="m-0">Nemo Enim</h3>
-                  </div>
-                  <br />
-                </div>
-                <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-secondary">
-                    <i
-                      class="ri-gradienter-line"
-                      style="font-size: 1.8rem; color: #ffa76e"
-                    ></i>
-                    <h3 class="m-0">Eiusmod Tempor</h3>
-                  </div>
-                  <br />
-                </div>
-                <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-secondary">
-                    <i
-                      class="ri-file-list-3-line"
-                      style="font-size: 1.8rem; color: #11dbcf"
-                    ></i>
-                    <h3 class="m-0">Midela Teren</h3>
-                  </div>
-                  <br />
-                </div>
-                <div class="col-xs-6 col-lg-3 col-md-4">
-                  <div class="card shadow bg-secondary">
-                    <i
-                      class="ri-price-tag-2-line"
-                      style="font-size: 1.8rem; color: #4233ff"
-                    ></i>
-                    <h3 class="m-0">Pira Neve</h3>
                   </div>
                   <br />
                 </div>
