--- a/index.html
+++ b/index.html
@@ -1218,13 +1218,13 @@
               <div class="row">
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <h4>DATA ANALYTICS ENGINES</h4>
-                  <div class="card shadow bg-secondary">
+                  <div class="card shadow bg-secondary h-100">
                     <h3 class="m-0">Apache Spark</h3>
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <h4>WEB FRAMEWORKS</h4>
-                  <div class="card shadow bg-secondary">
+                  <div class="card shadow bg-secondary h-100">
                     <h3 class="m-0">Spring Boot</h3>
                     <h3 class="m-0">Angular</h3>
                     <h3 class="m-0">Laravel</h3>
@@ -1232,25 +1232,19 @@
                     <h3 class="m-0">Flask</h3>
                     <h3 class="m-0">ReactJs</h3>
                   </div>
-                  <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <div class="card shadow bg-secondary">
-                    <i
-                      class="ri-calendar-todo-line"
-                      style="font-size: 1.8rem; color: #e80368"
-                    ></i>
-                    <h3 class="m-0">Sed perspiciatis</h3>
+                  <h4>MOBILE FRAMEWORKS</h4>
+                  <div class="card shadow bg-secondary h-100">
+                    <h3 class="m-0">Flutter</h3>
+                    <h3 class="m-0">React Native</h3>
                   </div>
-                  <br />
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <div class="card shadow bg-secondary">
-                    <i
-                      class="ri-paint-brush-line"
-                      style="font-size: 1.8rem; color: #e361ff"
-                    ></i>
-                    <h3 class="m-0">Magni Dolores</h3>
+                  <h4>DATABASE TECHNOLOGIES</h4>
+                  <div class="card shadow bg-secondary h-100">
+                    <h3 class="m-0">SQL</h3>
+                    <h3 class="m-0">MongoDB</h3>
                   </div>
                   <br />
                 </div>
