--- a/index.html
+++ b/index.html
@@ -1210,43 +1210,58 @@
             </section>
             <br />
             <!-- tools section -->
-            <section>
+            <section class="">
               <div class="inline-flex flex-column mb-3">
                 <h2 style="margin-bottom: 0.25rem">Tools</h2>
                 <div class="bg-primary" style="height: 2px"></div>
               </div>
               <div class="row">
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <h4>DATA ANALYTICS ENGINES</h4>
-                  <div class="card shadow bg-secondary h-100">
-                    <h3 class="m-0">Apache Spark</h3>
+                  <div class="h-100" style="border: 2px solid var(--primary)">
+                    <h4 style="border-bottom: 2px solid var(--primary)">
+                      DATA ANALYTICS ENGINES
+                    </h4>
+                    <div class="">
+                      <h3 class="m-0">Apache Spark</h3>
+                    </div>
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <h4>WEB FRAMEWORKS</h4>
-                  <div class="card shadow bg-secondary h-100">
-                    <h3 class="m-0">Spring Boot</h3>
-                    <h3 class="m-0">Angular</h3>
-                    <h3 class="m-0">Laravel</h3>
-                    <h3 class="m-0">ExpressJS & Nodejs</h3>
-                    <h3 class="m-0">Flask</h3>
-                    <h3 class="m-0">ReactJs</h3>
+                  <div class="h-100" style="border: 2px solid var(--primary)">
+                    <h4 style="border-bottom: 2px solid var(--primary)">
+                      WEB FRAMEWORKS
+                    </h4>
+                    <div class="card shadow bg-secondary h-100">
+                      <h3 class="m-0">Spring Boot</h3>
+                      <h3 class="m-0">Angular</h3>
+                      <h3 class="m-0">Laravel</h3>
+                      <h3 class="m-0">ExpressJS & Nodejs</h3>
+                      <h3 class="m-0">Flask</h3>
+                      <h3 class="m-0">ReactJs</h3>
+                    </div>
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <h4>MOBILE FRAMEWORKS</h4>
-                  <div class="card shadow bg-secondary h-100">
-                    <h3 class="m-0">Flutter</h3>
-                    <h3 class="m-0">React Native</h3>
+                  <div class="h-100" style="border: 2px solid var(--primary)">
+                    <h4 style="border-bottom: 2px solid var(--primary)">
+                      MOBILE FRAMEWORKS
+                    </h4>
+                    <div class="card shadow bg-secondary h-100">
+                      <h3 class="m-0">Flutter</h3>
+                      <h3 class="m-0">React Native</h3>
+                    </div>
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <h4>DATABASE TECHNOLOGIES</h4>
-                  <div class="card shadow bg-secondary h-100">
-                    <h3 class="m-0">SQL</h3>
-                    <h3 class="m-0">MongoDB</h3>
+                  <div class="h-100" style="border: 2px solid var(--primary)">
+                    <h4 style="border-bottom: 2px solid var(--primary)">
+                      DATABASE TECHNOLOGIES
+                    </h4>
+                    <div class="card shadow bg-secondary h-100">
+                      <h3 class="m-0">SQL</h3>
+                      <h3 class="m-0">MongoDB</h3>
+                    </div>
                   </div>
-                  <br />
                 </div>
               </div>
             </section>
