--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
               </div>
               <div class="row">
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <div class="h-100" style="border: 2px solid var(--primary)">
+                  <div class="h-100 shadow" style="border: 2px solid var(--primary)">
                     <h4 style="border-bottom: 2px solid var(--primary)">
                       DATA ANALYTICS ENGINES
                     </h4>
@@ -1227,11 +1227,11 @@
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <div class="h-100" style="border: 2px solid var(--primary)">
+                  <div class="h-100 shadow" style="border: 2px solid var(--primary)">
                     <h4 style="border-bottom: 2px solid var(--primary)">
                       WEB FRAMEWORKS
                     </h4>
-                    <div class="card shadow bg-secondary h-100">
+                    <div class="">
                       <h3 class="m-0">Spring Boot</h3>
                       <h3 class="m-0">Angular</h3>
                       <h3 class="m-0">Laravel</h3>
@@ -1242,22 +1242,22 @@
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <div class="h-100" style="border: 2px solid var(--primary)">
+                  <div class="h-100 shadow" style="border: 2px solid var(--primary)">
                     <h4 style="border-bottom: 2px solid var(--primary)">
                       MOBILE FRAMEWORKS
                     </h4>
-                    <div class="card shadow bg-secondary h-100">
+                    <div class="">
                       <h3 class="m-0">Flutter</h3>
                       <h3 class="m-0">React Native</h3>
                     </div>
                   </div>
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
-                  <div class="h-100" style="border: 2px solid var(--primary)">
+                  <div class="h-100 shadow" style="border: 2px solid var(--primary)">
                     <h4 style="border-bottom: 2px solid var(--primary)">
                       DATABASE TECHNOLOGIES
                     </h4>
-                    <div class="card shadow bg-secondary h-100">
+                    <div class="">
                       <h3 class="m-0">SQL</h3>
                       <h3 class="m-0">MongoDB</h3>
                     </div>
