--- a/index.html
+++ b/index.html
@@ -1219,10 +1219,10 @@
                 <h2 style="margin-bottom: 0.25rem">Tools</h2>
                 <div class="bg-primary" style="height: 2px"></div>
               </div>
-              <div class="row">
+              <div class="row text-secondary">
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
-                    class="h-100 shadow"
+                    class="h-100 shadow pattern-circuit"
                     style="border: 2px solid var(--primary)"
                   >
                     <h4
@@ -1238,7 +1238,7 @@
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
-                    class="h-100 shadow"
+                    class="h-100 shadow pattern-circuit"
                     style="border: 2px solid var(--primary)"
                   >
                     <h4
@@ -1259,7 +1259,7 @@
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
-                    class="h-100 shadow"
+                    class="h-100 shadow pattern-circuit"
                     style="border: 2px solid var(--primary)"
                   >
                     <h4
@@ -1276,7 +1276,7 @@
                 </div>
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
-                    class="h-100 shadow"
+                    class="h-100 shadow pattern-circuit"
                     style="border: 2px solid var(--primary)"
                   >
                     <h4
