--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,9 @@
                       DATA ANALYTICS ENGINES
                     </h4>
                     <div class="p-3">
-                      <h3 class="m-0">Apache Spark</h3>
+                      <ul>
+                        <li style="font-size: 1.17rem">Apache Spark</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -1248,12 +1250,14 @@
                       WEB FRAMEWORKS
                     </h4>
                     <div class="p-3">
-                      <h3 class="m-0">Spring Boot</h3>
-                      <h3 class="m-0">Angular</h3>
-                      <h3 class="m-0">Laravel</h3>
-                      <h3 class="m-0">ExpressJS & Nodejs</h3>
-                      <h3 class="m-0">Flask</h3>
-                      <h3 class="m-0">ReactJs</h3>
+                      <ul>
+                        <li style="font-size: 1.17rem">Spring Boot</li>
+                        <li style="font-size: 1.17rem">Angular</li>
+                        <li style="font-size: 1.17rem">Laravel</li>
+                        <li style="font-size: 1.17rem">ExpressJS & Nodejs</li>
+                        <li style="font-size: 1.17rem">Flask</li>
+                        <li style="font-size: 1.17rem">ReactJs</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -1269,8 +1273,10 @@
                       MOBILE FRAMEWORKS
                     </h4>
                     <div class="p-3">
-                      <h3 class="m-0">Flutter</h3>
-                      <h3 class="m-0">React Native</h3>
+                      <ul>
+                        <li style="font-size: 1.17rem">Flutter</li>
+                        <li style="font-size: 1.17rem">React Native</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
@@ -1286,8 +1292,10 @@
                       DATABASE TECHNOLOGIES
                     </h4>
                     <div class="p-3">
-                      <h3 class="m-0">SQL</h3>
-                      <h3 class="m-0">MongoDB</h3>
+                      <ul>
+                        <li style="font-size: 1.17rem">SQL</li>
+                        <li style="font-size: 1.17rem">MongoDB</li>
+                      </ul>
                     </div>
                   </div>
                 </div>
