--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,10 @@
                   >
                     <h4
                       class="m-0 p-3"
-                      style="border-bottom: 2px solid var(--primary)"
+                      style="
+                        background-color: #43b35c;
+                        border-bottom: 2px solid var(--primary);
+                      "
                     >
                       DATA ANALYTICS ENGINES
                     </h4>
@@ -1241,7 +1244,10 @@
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
                     class="h-100 shadow pattern-circuit"
-                    style="border: 2px solid var(--primary)"
+                    style="
+                      background-color: #43b35c;
+                      border: 2px solid var(--primary);
+                    "
                   >
                     <h4
                       class="m-0 p-3"
@@ -1264,7 +1270,10 @@
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
                     class="h-100 shadow pattern-circuit"
-                    style="border: 2px solid var(--primary)"
+                    style="
+                      background-color: #43b35c;
+                      border: 2px solid var(--primary);
+                    "
                   >
                     <h4
                       class="m-0 p-3"
@@ -1283,7 +1292,10 @@
                 <div class="col-xs-6 col-lg-3 col-md-4 mb-3">
                   <div
                     class="h-100 shadow pattern-circuit"
-                    style="border: 2px solid var(--primary)"
+                    style="
+                      background-color: #43b35c;
+                      border: 2px solid var(--primary);
+                    "
                   >
                     <h4
                       class="m-0 p-3"
