--- a/index.html
+++ b/index.html
@@ -1318,23 +1318,44 @@
         <!-- experiences panel -->
         <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
           <amp-layout layout="container">
-            <div class="resume-item">
-              <h4 class="text-primary uppercase">SmartStock Company Limited</h4>
-              <caption>
-                Dar es Salaam — Software Developer
-              </caption>
-              <p>
-                <em>Dec, 2019 - Present</em>
-              </p>
-              <dl>
-                <dd>
-                  Design and implementation of web and mobile applications.
-                </dd>
-              </dl>
-              <p style="line-height: 24px">
-                <em></em>
-              </p>
-            </div>
+            <!-- section -->
+            <section>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  SmartStock Company Limited
+                </h4>
+                <caption>
+                  Software Developer
+                </caption>
+                <p style="line-height: 24px">
+                  <em>Dec, 2019 - Present</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl>
+                  <dd>
+                    Design and implementation of web and mobile applications.
+                  </dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">DHIS Tanzania</h4>
+                <caption>
+                  Software Developer
+                </caption>
+                <p style="line-height: 24px">
+                  <em>July, 2018 - September, 2018</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl>
+                  <dd>
+                    Design and implementation of web APIs for frontend
+                    applications.
+                  </dd>
+                </dl>
+              </div>
+            </section>
           </amp-layout>
         </div>
         <!-- contacts panel -->
