--- a/index.html
+++ b/index.html
@@ -1355,6 +1355,31 @@
                   </dd>
                 </dl>
               </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">Smart Codes</h4>
+                <caption>
+                  Front-End Developer, Back-End Developer
+                </caption>
+                <p style="line-height: 24px">
+                  <em>July, 2017 - September, 2017</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl>
+                  <dd>
+                    Realization and creation of static and dynamic interactive
+                    web pages.
+                  </dd>
+                  <dd>
+                    Developed back end applications in php and java for web
+                    systems and mobile apps.
+                  </dd>
+                  <dd>
+                    Creation of software and tools to simplify the internal
+                    workings at smart codes, and for clients.
+                  </dd>
+                </dl>
+              </div>
             </section>
           </amp-layout>
         </div>
