--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
                 <caption>
                   Software Developer
                 </caption>
-                <p style="line-height: 24px">
+                <p>
                   <em>Dec, 2019 - Present</em>
                   &ensp;|&ensp;
                   <small>Dar es Salaam</small>
@@ -1343,12 +1343,12 @@
                 <caption>
                   Software Developer
                 </caption>
-                <p style="line-height: 24px">
+                <p>
                   <em>July, 2018 - September, 2018</em>
                   &ensp;|&ensp;
                   <small>Dar es Salaam</small>
                 </p>
-                <dl>
+                <dl style="line-height: 24px">
                   <dd>
                     Design and implementation of web APIs for frontend
                     applications.
@@ -1360,12 +1360,12 @@
                 <caption>
                   Front-End Developer, Back-End Developer
                 </caption>
-                <p style="line-height: 24px">
+                <p>
                   <em>July, 2017 - September, 2017</em>
                   &ensp;|&ensp;
                   <small>Dar es Salaam</small>
                 </p>
-                <dl>
+                <dl style="line-height: 24px">
                   <dd>
                     Realization and creation of static and dynamic interactive
                     web pages.
