--- a/index.html
+++ b/index.html
@@ -821,7 +821,7 @@
             >
               Competencies
             </div>
-            <div id="tab3" role="tab" aria-controls="tabpanel3" option="3">
+            <div id="experiences" role="tab" aria-controls="tabpanel3" option="3">
               Experience
             </div>
             <div id="tab4" role="tab" aria-controls="tabpanel4" option="4">
@@ -1316,10 +1316,14 @@
           </amp-layout>
         </div>
         <!-- experiences panel -->
-        <div id="tabpanel3" role="tabpanel" aria-labelledby="tab3" option>
+        <div id="tabpanel3" role="tabpanel" aria-labelledby="experiences" option>
           <amp-layout layout="container">
-            <!-- section -->
+            <!-- experiences section -->
             <section>
+              <div class="inline-flex flex-column mb-3">
+                <h2 style="margin-bottom: 0.25rem">Experiences</h2>
+                <div class="bg-primary" style="height: 2px"></div>
+              </div>
               <div class="resume-item">
                 <h4 class="text-primary uppercase">
                   SmartStock Company Limited
