--- a/index.html
+++ b/index.html
@@ -824,13 +824,16 @@
             <div id="experiences" role="tab" aria-controls="tabpanel3" option="3">
               Experience
             </div>
-            <div id="tab4" role="tab" aria-controls="tabpanel4" option="4">
+            <div id="projects" role="tab" aria-controls="tabpanel4" option="4">
               Projects
             </div>
-            <div id="tab5" role="tab" aria-controls="tabpanel5" option="5">
+            <div id="education" role="tab" aria-controls="tabpanel5" option="5">
+              Education
+            </div>
+            <div id="honors" role="tab" aria-controls="tabpanel6" option="6">
               Honors
             </div>
-            <div id="contacts" role="tab" aria-controls="tabpanel6" option="6">
+            <div id="contacts" role="tab" aria-controls="tabpanel7" option="7">
               Contacts
             </div>
           </amp-selector>
@@ -1387,16 +1390,20 @@
             </section>
           </amp-layout>
         </div>
-        <!-- contacts panel -->
-        <div id="tabpanel4" role="tabpanel" aria-labelledby="tab4" option>
+        <!-- projects panel -->
+        <div id="tabpanel4" role="tabpanel" aria-labelledby="projects" option>
           Tab four content...
         </div>
-        <!-- contacts panel -->
-        <div id="tabpanel5" role="tabpanel" aria-labelledby="tab5" option>
+        <!-- education panel -->
+        <div id="tabpanel5" role="tabpanel" aria-labelledby="education" option>
+          Tab five content...
+        </div>
+        <!-- honors panel -->
+        <div id="tabpanel6" role="tabpanel" aria-labelledby="honors" option>
           Tab five content...
         </div>
         <!-- contacts panel -->
-        <div id="tabpanel6" role="tabpanel" aria-labelledby="contacts" option>
+        <div id="tabpanel7" role="tabpanel" aria-labelledby="contacts" option>
           <div style="margin: 2rem">
             <div class="inline-flex flex-column mb-3">
               <h2 style="margin-bottom: 0.25rem">Contacts</h2>
