--- a/index.html
+++ b/index.html
@@ -821,7 +821,12 @@
             >
               Competencies
             </div>
-            <div id="experiences" role="tab" aria-controls="tabpanel3" option="3">
+            <div
+              id="experiences"
+              role="tab"
+              aria-controls="tabpanel3"
+              option="3"
+            >
               Experience
             </div>
             <div id="projects" role="tab" aria-controls="tabpanel4" option="4">
@@ -1319,7 +1324,12 @@
           </amp-layout>
         </div>
         <!-- experiences panel -->
-        <div id="tabpanel3" role="tabpanel" aria-labelledby="experiences" option>
+        <div
+          id="tabpanel3"
+          role="tabpanel"
+          aria-labelledby="experiences"
+          option
+        >
           <amp-layout layout="container">
             <!-- experiences section -->
             <section>
@@ -1396,7 +1406,75 @@
         </div>
         <!-- education panel -->
         <div id="tabpanel5" role="tabpanel" aria-labelledby="education" option>
-          Tab five content...
+          <amp-layout layout="container">
+            <!-- education section -->
+            <section>
+              <div class="inline-flex flex-column mb-3">
+                <h2 style="margin-bottom: 0.25rem">Education</h2>
+                <div class="bg-primary" style="height: 2px"></div>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">
+                  SmartStock Company Limited
+                </h4>
+                <caption>
+                  Software Developer
+                </caption>
+                <p>
+                  <em>Dec, 2019 - Present</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl>
+                  <dd>
+                    Design and implementation of web and mobile applications.
+                  </dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">DHIS Tanzania</h4>
+                <caption>
+                  Software Developer
+                </caption>
+                <p>
+                  <em>July, 2018 - September, 2018</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>
+                    Design and implementation of web APIs for frontend
+                    applications.
+                  </dd>
+                </dl>
+              </div>
+              <div class="resume-item">
+                <h4 class="text-primary uppercase">Smart Codes</h4>
+                <caption>
+                  Front-End Developer, Back-End Developer
+                </caption>
+                <p>
+                  <em>July, 2017 - September, 2017</em>
+                  &ensp;|&ensp;
+                  <small>Dar es Salaam</small>
+                </p>
+                <dl style="line-height: 24px">
+                  <dd>
+                    Realization and creation of static and dynamic interactive
+                    web pages.
+                  </dd>
+                  <dd>
+                    Developed back end applications in php and java for web
+                    systems and mobile apps.
+                  </dd>
+                  <dd>
+                    Creation of software and tools to simplify the internal
+                    workings at smart codes, and for clients.
+                  </dd>
+                </dl>
+              </div>
+            </section>
+          </amp-layout>
         </div>
         <!-- honors panel -->
         <div id="tabpanel6" role="tabpanel" aria-labelledby="honors" option>
